# serializer version: 1
# name: TestAdministratorRoles.test_ok[None]
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'myersmitchell',
    'id': 2,
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestAdministratorRoles.test_ok[base]
  dict({
    'active': True,
    'administrator_role': 'base',
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'myersmitchell',
    'id': 2,
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestAdministratorRoles.test_ok[full]
  dict({
    'active': True,
    'administrator_role': 'full',
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'myersmitchell',
    'id': 2,
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestAdministratorRoles.test_ok[users]
  dict({
    'active': True,
    'administrator_role': 'users',
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'myersmitchell',
    'id': 2,
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdateUser.test_force_reset
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': True,
    'groups': list([
    ]),
    'handle': 'myersmitchell',
    'id': 2,
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdateUser.test_groups[resp_1]
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 2,
        'legacy_id': None,
        'name': 'gaffers',
      }),
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'musicians',
      }),
    ]),
    'handle': 'myersmitchell',
    'id': 2,
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdateUser.test_groups[resp_2]
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 2,
        'legacy_id': None,
        'name': 'gaffers',
      }),
    ]),
    'handle': 'myersmitchell',
    'id': 2,
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdateUser.test_groups[resp_3]
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'myersmitchell',
    'id': 2,
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdateUser.test_password[a_whole_new_password]
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'myersmitchell',
    'id': 2,
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdateUser.test_password[fail]
  dict({
    'id': 'bad_request',
    'message': 'Password does not meet minimum length requirement (8)',
  })
# ---
# name: TestUpdateUser.test_primary_group[False]
  dict({
    'id': 'bad_request',
    'message': 'User is not a member of group',
  })
# ---
# name: TestUpdateUser.test_primary_group[True]
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'musicians',
      }),
    ]),
    'handle': 'brandonberry',
    'id': 2,
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': dict({
      'id': 1,
      'legacy_id': None,
      'name': 'musicians',
    }),
  })
# ---
# name: test_create[None]
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'fred',
    'id': 3,
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: test_create[None][data_layer]
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'fred',
    'id': 3,
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: test_create[None][location]
  '/admin/users/3'
# ---
# name: test_get_roles
  list([
    dict({
      'description': 'Manage who is an administrator and what they can do.',
      'id': 'full',
      'name': 'Full',
    }),
    dict({
      'description': 'Manage instance settings and administrative messages.',
      'id': 'settings',
      'name': 'Settings',
    }),
    dict({
      'description': 'Manage users in any space. Delete any space.',
      'id': 'spaces',
      'name': 'Spaces',
    }),
    dict({
      'description': 'Create user accounts. Control activation of user accounts.',
      'id': 'users',
      'name': 'Users',
    }),
    dict({
      'description': '''
        Provides ability to:
        - Create new spaces even if the `Free Spaces` setting is not enabled.
        - Manage HMMs and common references.
        - View all running jobs.
        - Cancel any job.
      ''',
      'id': 'base',
      'name': 'Base',
    }),
  ])
# ---
# name: test_get_user
  dict({
    'active': True,
    'administrator_role': 'base',
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'myersmitchell',
    'id': 2,
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: test_list_users
  dict({
    'found_count': 3,
    'items': list([
      dict({
        'active': True,
        'administrator_role': 'full',
        'force_reset': False,
        'groups': list([
        ]),
        'handle': 'leeashley',
        'id': 1,
        'last_password_change': str,
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
      dict({
        'active': True,
        'administrator_role': 'full',
        'force_reset': False,
        'groups': list([
        ]),
        'handle': 'modonnell',
        'id': 3,
        'last_password_change': str,
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
      dict({
        'active': True,
        'administrator_role': 'base',
        'force_reset': False,
        'groups': list([
        ]),
        'handle': 'myersmitchell',
        'id': 2,
        'last_password_change': str,
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
    ]),
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_update_admin_role[None]
  dict({
    'active': True,
    'administrator_role': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'myersmitchell',
    'id': 2,
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: test_update_admin_role[full]
  dict({
    'active': True,
    'administrator_role': 'full',
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'myersmitchell',
    'id': 2,
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: test_update_admin_role[users]
  dict({
    'active': True,
    'administrator_role': 'users',
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'myersmitchell',
    'id': 2,
    'last_password_change': str,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
